<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@color/white"
    android:background="?attr/theme_background"
    tools:context=".ui.auth.login.LoginFragment">

    <TextView
        android:id="@+id/loginTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="Login"
        android:textAlignment="center"
        android:textSize="@dimen/_24ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Login" />

    <TextView
        android:id="@+id/accessAccountTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:fontFamily="@font/poppins_regular"
        android:text="Access account"
        android:textAlignment="center"
        android:textColor="@color/light"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginTextView"
        tools:text="Access account" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_marginHorizontal="@dimen/_30sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accessAccountTextView">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:hint="@string/email"
            app:hintTextColor="@color/primary"
            android:textColorHint="@color/light"
            app:boxCornerRadiusBottomEnd="@dimen/_14sdp"
            app:boxCornerRadiusBottomStart="@dimen/_14sdp"
            app:boxCornerRadiusTopEnd="@dimen/_14sdp"
            app:boxCornerRadiusTopStart="@dimen/_14sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:boxStrokeWidth="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:placeholderText="@string/email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxBackgroundColor="@color/extra_light">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/extra_light"
                android:textSize="@dimen/_12ssp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:hint="@string/password"
            android:gravity="center"
            app:hintTextColor="@color/primary"
            android:textColorHint="@color/light"
            app:boxCornerRadiusBottomEnd="@dimen/_14sdp"
            app:boxCornerRadiusBottomStart="@dimen/_14sdp"
            app:boxCornerRadiusTopEnd="@dimen/_14sdp"
            app:boxCornerRadiusTopStart="@dimen/_14sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email"
            app:placeholderText="@string/password"
            app:boxStrokeWidth="0dp"
            app:endIconMode="password_toggle"
            app:endIconDrawable="@drawable/ic_eye_24"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxBackgroundColor="@color/extra_light"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/extra_light"
                android:textSize="@dimen/_12ssp"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>


        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/signInAppcompatButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:gravity="center"
            android:textAllCaps="false"
            android:background="@drawable/button_style"
            android:backgroundTint="@drawable/button_style"
            android:layout_marginTop="@dimen/_80sdp"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="@dimen/_18ssp"
            android:fontFamily="@font/poppins_medium"
            app:spinning_bar_width="@dimen/_4sdp"
            app:spinning_bar_color="@color/primary_variant"
            app:spinning_bar_padding="@dimen/_6sdp"
            />

<!--        <androidx.appcompat.widget.AppCompatButton-->
<!--            android:id="@+id/signInAppcompatButton"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="@dimen/_50sdp"-->
<!--            android:gravity="center"-->
<!--            android:background="@drawable/button_style"-->
<!--            android:text="@string/sign_in"-->
<!--            android:textColor="@color/white"-->
<!--            android:textAlignment="center"-->
<!--            android:textSize="@dimen/_18ssp"-->
<!--            android:fontFamily="@font/poppins_medium"-->
<!--            />-->

        <TextView
            android:id="@+id/registerTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/do_not_you_have"
            android:fontFamily="@font/poppins_medium"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/light"
            android:layout_marginTop="@dimen/_50sdp"
            />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>