<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@color/white"
    android:background="?attr/theme_background"
    tools:context=".ui.auth.login.LoginFragment">

    <TextView
        android:id="@+id/registerTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="Register"
        android:textAlignment="center"
        android:textSize="@dimen/_24ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Register" />

    <TextView
        android:id="@+id/createAccountTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:fontFamily="@font/poppins_regular"
        android:text="Create account"
        android:textAlignment="center"
        android:textColor="@color/light"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerTextView"
        tools:text="Create account" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_30sdp"
        android:layout_marginTop="64dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createAccountTextView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/firstName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_40sdp"
                android:hint="@string/first_name"
                app:hintTextColor="@color/primary"
                android:textColorHint="@color/light"
                app:boxBackgroundColor="@color/extra_light"
                app:boxCornerRadiusBottomEnd="@dimen/_14sdp"
                app:boxCornerRadiusBottomStart="@dimen/_14sdp"
                app:boxCornerRadiusTopEnd="@dimen/_14sdp"
                app:boxCornerRadiusTopStart="@dimen/_14sdp"
                app:boxStrokeWidth="0dp"
                app:placeholderText="@string/first_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/firstNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/extra_light"
                    android:textSize="@dimen/_12ssp" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lastName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:hint="@string/last_name"
                app:hintTextColor="@color/primary"
                android:textColorHint="@color/light"
                app:boxBackgroundColor="@color/extra_light"
                app:boxCornerRadiusBottomEnd="@dimen/_14sdp"
                app:boxCornerRadiusBottomStart="@dimen/_14sdp"
                app:boxCornerRadiusTopEnd="@dimen/_14sdp"
                app:boxCornerRadiusTopStart="@dimen/_14sdp"
                app:boxStrokeWidth="0dp"
                app:placeholderText="@string/last_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lastNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/extra_light"
                    android:textSize="@dimen/_12ssp" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mobileNumber"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:hint="@string/mobile_number"
            app:hintTextColor="@color/primary"
            android:textColorHint="@color/light"
            app:boxBackgroundColor="@color/extra_light"
            app:boxCornerRadiusBottomEnd="@dimen/_14sdp"
            app:boxCornerRadiusBottomStart="@dimen/_14sdp"
            app:boxCornerRadiusTopEnd="@dimen/_14sdp"
            app:boxCornerRadiusTopStart="@dimen/_14sdp"
            app:boxStrokeWidth="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:placeholderText="@string/mobile_number">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mobileNumberEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/extra_light"
                android:inputType="phone"
                android:textSize="@dimen/_12ssp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:hint="@string/email"
            app:hintTextColor="@color/primary"
            android:textColorHint="@color/light"
            app:boxBackgroundColor="@color/extra_light"
            app:boxCornerRadiusBottomEnd="@dimen/_14sdp"
            app:boxCornerRadiusBottomStart="@dimen/_14sdp"
            app:boxCornerRadiusTopEnd="@dimen/_14sdp"
            app:boxCornerRadiusTopStart="@dimen/_14sdp"
            app:boxStrokeWidth="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:placeholderText="@string/email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/extra_light"
                android:textSize="@dimen/_12ssp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:hint="@string/password"
            app:hintTextColor="@color/primary"
            android:textColorHint="@color/light"
            app:boxBackgroundColor="@color/extra_light"
            app:boxCornerRadiusBottomEnd="@dimen/_14sdp"
            app:boxCornerRadiusBottomStart="@dimen/_14sdp"
            app:boxCornerRadiusTopEnd="@dimen/_14sdp"
            app:boxCornerRadiusTopStart="@dimen/_14sdp"
            app:boxStrokeWidth="0dp"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email"
            app:placeholderText="@string/password">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/extra_light"
                android:inputType="textPassword"
                android:textSize="@dimen/_12ssp" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/uploadImage"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_70sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/button_style"
            android:backgroundTint="@color/extra_light"
            android:contentDescription="Upload Image"
            app:srcCompat="@drawable/ic_person_24"
            tools:src="@drawable/ic_person_24" />

        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/signUpAppcompatButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/button_style"
            android:backgroundTint="@drawable/button_style"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_18ssp"
            app:spinning_bar_color="@color/primary_variant"
            app:spinning_bar_padding="@dimen/_6sdp"
            app:spinning_bar_width="@dimen/_4sdp" />

        <!--        <androidx.appcompat.widget.AppCompatButton-->
        <!--            android:id="@+id/signInAppcompatButton"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="@dimen/_50sdp"-->
        <!--            android:gravity="center"-->
        <!--            android:background="@drawable/button_style"-->
        <!--            android:text="@string/sign_in"-->
        <!--            android:textColor="@color/white"-->
        <!--            android:textAlignment="center"-->
        <!--            android:textSize="@dimen/_18ssp"-->
        <!--            android:fontFamily="@font/poppins_medium"-->
        <!--            />-->


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>