<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_80sdp"
    tools:background="@color/white"
    android:background="?attr/theme_background"
    android:gravity="center"
    android:orientation="horizontal"
    >

    <ImageView
        android:id="@+id/restaurantLogoImageView"
        android:layout_width="@dimen/_54sdp"
        android:layout_height="@dimen/_54sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:background="@drawable/image_holder"
        android:backgroundTint="@drawable/image_holder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/ic_eye_24"
        android:contentDescription="@string/restaurant_logo" />

    <LinearLayout
        android:id="@+id/restaurantInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@+id/restaurantLogoImageView"
        app:layout_constraintTop_toTopOf="@+id/restaurantLogoImageView"
        app:layout_constraintEnd_toStartOf="@+id/discountRateTextView"
        app:layout_constraintBottom_toBottomOf="@+id/restaurantLogoImageView"
        >

        <TextView
            android:id="@+id/restaurantNameTextView"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:textAlignment="center"
            android:fontFamily="@font/poppins_medium"
            tools:text="Faraone, Floridia and De Rossi"
            android:textSize="@dimen/_10ssp"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@android:color/transparent"
            android:layout_marginTop="@dimen/_10sdp"
            >

            <ImageView
                android:layout_width="@dimen/_12sdp"
                android:layout_height="@dimen/_12sdp"
                app:srcCompat="@drawable/ic_star_24"
                android:background="@android:color/transparent"
                android:contentDescription="@string/rating_icon" />

            <TextView
                android:id="@+id/ratingTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:fontFamily="@font/poppins_medium"
                android:layout_marginStart="@dimen/_4sdp"
                tools:text="4.6"
                android:textSize="@dimen/_8ssp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:fontFamily="@font/poppins_medium"
                android:layout_marginStart="@dimen/_4sdp"
                tools:text="•"
                android:layout_marginEnd="@dimen/_6sdp"
                android:textSize="@dimen/_8ssp"
                />

            <TextView
                android:id="@+id/categoryTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:fontFamily="@font/poppins_medium"
                tools:text="Contemporary Casual"
                android:textSize="@dimen/_8ssp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:fontFamily="@font/poppins_medium"
                android:layout_marginStart="@dimen/_4sdp"
                tools:text="•"
                android:layout_marginEnd="@dimen/_6sdp"
                android:textSize="@dimen/_8ssp"
                />

            <ImageView
                android:layout_width="@dimen/_12sdp"
                android:layout_height="@dimen/_12sdp"
                app:srcCompat="@drawable/ic_time_24"
                android:background="@android:color/transparent"
                android:contentDescription="@string/arrival_time" />

            <TextView
                android:id="@+id/arrivalTimeTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_4sdp"
                android:fontFamily="@font/poppins_medium"
                tools:text="15 min"
                android:textSize="@dimen/_8ssp"
                android:background="@android:color/transparent"
                />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/discountRateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:textAllCaps="true"
        android:textColor="@color/primary"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/restaurantInfo"
        app:layout_constraintStart_toEndOf="@+id/restaurantInfo"
        tools:text="50% OFF" />


</androidx.constraintlayout.widget.ConstraintLayout>